--- a/src/GUI/fChonNhaCungCap_NhapHang.form
+++ b/src/GUI/fChonNhaCungCap_NhapHang.form
@@ -41,12 +41,12 @@
                   <Component id="jScrollPane1" pref="709" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonTaoNhaCungCap" alignment="0" min="-2" pref="99" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jSpinnerSoLuongLo" min="-2" pref="140" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="jButtonTaoNhaCungCap" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -341,7 +341,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="T&#x1ea1;o m&#x1edb;i"/>
+        <Property name="text" type="java.lang.String" value="T&#x1ea1;o m&#x1edb;i nh&#xe0; cung c&#x1ea5;p"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTaoNhaCungCapActionPerformed"/>
